--- a/index.html
+++ b/index.html
@@ -58,23 +58,38 @@
 		<button onclick="pause()">pause</button>
 
 		<div class="class-config">
-			<h4>Red</h4>
+			<h2>Red</h2>
+
 			<div>
 				Create/Destroy:
 				<input type="number" value="1" id="red-num">
 				<button id="red-create" onclick="createVehicle('Red')">+</button>
 				<button id="red-destroy">-</button>
 			</div>
+
+			<br>
+			<h3>Properties</h3>
 			<div>Max Speed: <input type="number" value="100" id="red-speed"></div>
 			<div>Max Force: <input type="number" value="5" id="red-force"></div>
 			<div>Size: <input type="number" value="7" id="red-size"></div>
 			<div>Vision: <input type="number" value="50" id="red-perception"></div>
 			<div>Elbow Room: <input type="number" value="10" id="red-leeway"></div>
+
+			<br>
+			<h3>Behaviors</h3>
+			<div>
+				<label>
+					<input type="checkbox" id="red-seek">
+					Seek:
+				</label>
+				<input type="number" value="100" id="red-seek-x">, <input type="number" value="100" id="red-seek-y">
+			</div>
 		</div>
 
 		<button onclick="createVehicle('Green')">create green</button>
 	</div>
 
 	<script src="bundle.js"></script>
+	<script src="demo.js"></script>
 </body>
 </html>
