Decouple the demo and sandbox code

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 	<button id="tog-btn" onclick="toggleMenu()">menu</button>
 
 	<div id="my-sidemenu">
-		<button onclick="play()">play</button>
-		<button onclick="pause()">pause</button>
+		<button onclick="Sandbox.play()">play</button>
+		<button onclick="Sandbox.pause()">pause</button>
 
 		<div class="class-config">
 			<h2>Red</h2>
