--- a/index.html
+++ b/index.html
@@ -5,36 +5,7 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>TV Steer</title>
 
-	<style>
-		* { margin: 0; padding: 0;}
-		body, html {
-			height: 100%;
-			overflow: hidden;
-		}
-
-		#my-sidemenu {
-			height: 100%;
-			position: fixed;
-			z-index: 1;
-			top: 0;
-			right: 0;
-			background: #abc;
-			background-color: rgba(170, 187, 204, 0.8);
-			overflow-x: hidden;
-			padding: 2.5em 0.5em;//.hack to get below toggle btn
-		}
-
-		#tog-btn {
-			position: fixed;
-			z-index: 2;
-			top: 1em;
-			right: 1em;
-		}
-
-		.class-config {
-			margin-top: 1em;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
 
 	<script charset="utf-8">
 		var showMenu = true;
