--- a/index.html
+++ b/index.html
@@ -17,53 +17,28 @@
 				document.getElementById("my-sidemenu").style.display = "none";
 			}
 		}
+
+		document.addEventListener('DOMContentLoaded', function(){
+			var canvas = document.getElementById('canvas');
+			canvas.width = 600;
+			canvas.height = 400;
+		});
 	</script>
 </head>
 <body>
 	<canvas id="canvas"></canvas>
+	<canvas id="canvas2"></canvas>
 
-	<button id="tog-btn" onclick="toggleMenu()">menu</button>
-
-	<div id="my-sidemenu">
-		<button onclick="Sandbox.play()">play</button>
-		<button onclick="Sandbox.pause()">pause</button>
-
-		<div>
-			<h2>Black</h2>
-
-			<div>
-				Create/Destroy:
-				<input type="number" value="1" id="black-num">
-				<button id="black-create" onclick="Sandbox.createVehicle('Black')">+</button>
-				<button id="black-destroy" onclick="destroyVehicle('Black')">-</button>
-			</div>
-
-			<h3>Properties</h3>
-			<div>Max Speed: <input type="number" value="100" id="black-speed"></div>
-			<div>Max Force: <input type="number" value="5" id="black-force"></div>
-			<div>Size: <input type="number" value="7" id="black-size"></div>
-			<div>Vision: <input type="number" value="50" id="black-perception"></div>
-			<div>Elbow Room: <input type="number" value="10" id="black-leeway"></div>
-
-			<h3>Behaviors</h3>
-			<div>
-				<div>
-					<label>
-						<input type="checkbox" id="black-seek">
-						Seek:
-					</label>
-					<input type="number" value="100" id="black-seek-x">, <input type="number" value="100" id="black-seek-y">
-				</div>
-				<div>
-					<label>
-						<input type="checkbox" id="black-arrive">
-						Arrive:
-					</label>
-					<input type="number" value="100" id="black-arrive-x">, <input type="number" value="100" id="black-arrive-y">
-				</div>
-			</div>
-		</div>
-	</div>
+	<script charset="utf-8">
+		// play/pause on focus/blur
+		var canvas1 = document.getElementById("canvas");
+		canvas1.addEventListener("mouseenter", function(){
+			steersman.play();
+		}, false);
+		canvas1.addEventListener("mouseout", function(){
+			steersman.pause();
+		}, false);
+	</script>
 
 	<script src="bundle.js"></script>
 	<script src="demo.js"></script>
